--- a/src/org/oop/view/agenda/Agenda.form
+++ b/src/org/oop/view/agenda/Agenda.form
@@ -245,15 +245,17 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="c371a" class="javax.swing.JLabel" binding="insegnamentolabel">
+              <component id="c371a" class="javax.swing.JLabel" binding="insegnamentoLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font style="1"/>
+                  <foreground color="-15859567"/>
                   <text value="Nome insegnamento"/>
                 </properties>
               </component>
-              <component id="39d0d" class="javax.swing.JLabel" binding="durataciclolabel">
+              <component id="39d0d" class="javax.swing.JLabel" binding="durataCicloLabel">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
