--- a/src/org/oop/view/agenda/FormAttivitaPeriodica.form
+++ b/src/org/oop/view/agenda/FormAttivitaPeriodica.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="15" left="15" bottom="15" right="15"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="520" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -40,7 +40,9 @@
           </component>
           <component id="97981" class="javax.swing.JComboBox" binding="teacherBox">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="367" height="26"/>
+              </grid>
             </constraints>
             <properties/>
           </component>
@@ -63,7 +65,7 @@
           <component id="84a2f" class="javax.swing.JFormattedTextField" binding="hourStartField" custom-create="true">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="367" height="28"/>
               </grid>
             </constraints>
             <properties/>
@@ -71,7 +73,7 @@
           <component id="3fc76" class="javax.swing.JFormattedTextField" binding="hourEndField" custom-create="true">
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="367" height="28"/>
               </grid>
             </constraints>
             <properties/>
@@ -95,14 +97,16 @@
           <component id="55972" class="javax.swing.JTextField" binding="aulaField">
             <constraints>
               <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="367" height="24"/>
               </grid>
             </constraints>
             <properties/>
           </component>
           <component id="6cb67" class="javax.swing.JComboBox" binding="dayBox">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="367" height="26"/>
+              </grid>
             </constraints>
             <properties>
               <model>
@@ -116,7 +120,9 @@
           </component>
           <component id="64bec" class="javax.swing.JLabel">
             <constraints>
-              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="367" height="16"/>
+              </grid>
             </constraints>
             <properties>
               <foreground color="-6381922"/>
